--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .heroshot{
-    background-image: url(/grey3q.jpg);
+    background-image: url(/images/grey3q.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
