--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .heroshot{
-    background-image: url(https://github.com/apolocervntes/minitest/blob/main/images/grey3q.jpg?raw=true);
+    background-image: url(https://github.com/apolocervntes/minitest/blob/main/images/grey3q.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
